--- a/.html
+++ b/.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resty</title>
+    <title>resty</title>
 </head>
 <body>
     ini punya resty
