--- a/tutorial_link.html/about.html
+++ b/tutorial_link.html/about.html
@@ -3,13 +3,14 @@
         <head>
             <title>Tutorial Link di HTML</title>
         </head>
-        <body>
+        <body style="background-image: url(snoopy.jpg);">
         <h1>Selamat Datang</h1>
             <p>
             <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
             <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
             <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
             <a href="download.html" style="color:black;background-color: bisque;">Download</a>
+             <a href="form.html" style="color:black;background-color:palevioletred;">Form</a>
             </p>
             <hr>
             <h1>Contoh Link Buntu</h1>
@@ -49,6 +50,36 @@
                 Karena itulah, Haechan menjadi salah satu member yang sangat dicintai oleh penggemar
                 NCT di seluruh dunia.
             </p>
+             <table border="1">
+        <tr>
+            <th rowspan="2" bgcolor="pink">Bulan</th>
+            <th colspan="2" bgcolor="bisque">Hasil Panen</th>
+        </tr>
+        <tr>
+            <th>Padi</th>
+            <th>Kacang</th>
+        </tr>
+        <tr>
+            <td>Januari</td>
+            <td>500 Kg</td>
+            <td>231 Kg</td>
+        </tr>
+        <tr>
+            <td>Februari</td>
+            <td>342 Kg</td>
+            <td>423 Kg</td>
+        </tr>
+        <tr>
+            <td>Maret</td>
+            <td>432 Kg</td>
+            <td>124 Kg</td>
+        </tr>
+        <tr>
+            <td>April</td>
+            <td>453 Kg</td>
+            <td>523 Kg</td>
+        </tr>
+    </table>
             <h2 id="penutup">Akhir Kata..</h2>
             <p>
                 Ini adalah penutup dari artikel ini, dan coba perhatikan headingnya.
