--- a/tutorial_link.html/download.html
+++ b/tutorial_link.html/download.html
@@ -3,13 +3,14 @@
     <head>
         <title>Tutorial Link di HTML</title>
     </head>
-    <body>
+    <body style="background-image: url(snoopy.jpg);">
       <h1>Halaman Download</h1>
         <p>
           <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:black;background-color: bisque;">Download</a>
+           <a href="form.html" style="color:black;background-color:palevioletred;">Form</a>
         </p>
         <hr>
         <p>Silakan Download File:
