--- a/tutorial_link.html/index.html
+++ b/tutorial_link.html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Tutorial Link di HTML</title>
-    </head>
+     <body style="background-image: url(snoopy.jpg);"></body>
     <body>
       <h1>Selamat Datang</h1>
         <p>
@@ -10,6 +10,7 @@
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:black;background-color: bisque;">Download</a>
+        <a href="form.html" style="color:black;background-color:palevioletred;">Form</a>
         </p>
         <hr>
         <p>
