update_video.html

--- a/tutorial_link.html/form.html
+++ b/tutorial_link.html/form.html
@@ -57,6 +57,7 @@
 <html>
 <head>
     <title>Registrasi</title>
+    <body style="background-image: url(snoopy.jpg)"></body>
 </head>
 <body>
     <form action="contact.php" method="POST">
