--- a/tutorial_link.html/video.html
+++ b/tutorial_link.html/video.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <title>Tutorial Link di HTML</title>
     </head>
-    <body style="background-image: url(snoopy.jpg);">
-      <h1>Halaman Download</h1>
-        <p>
-         <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
+    <body style="background-image:url(snoopy.jpg)"></body>
+    <h1>Video</h1>
+    <p>
+       <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
           <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
           <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
           <a href="download.html" style="color:black;background-color:whitesmoke;">Download</a>
         <a href="form.html" style="color:pink;background-color:whitesmoke;">Form</a>
         <a href="elemen.html" style="color:powderblue;background-color:whitesmoke;">Elemen</a>
         <a href="video.html" style="color: palevioletred;background-color: whitesmoke;">Video</a>
-        </p>
-        <hr>
-        <p>Silakan Download File:
-            <a href="haechan.jpg">Lee Haechan</a>
-        </p>
-        <hr>
-        <div>Copyright &copy; 2025 by Resty Destiani</div>
-    </body>
+    </p>
+     <meta charset="UTF-8">
+  <title>Contoh Video di HTML</title>
+</head>
+<body>
+  <h1>Contoh Video sebagai gift</h1>
+  <video autoplay loop muted playsinline>
+    <source src="cat-herd.webm" type="video/webm" />
+    <source src="snoopy.gift.mp4" type="video/mp4" />
+  </video>  
+</body>
 </html>
+
+    
