--- a/tutorial_link.html/about.html
+++ b/tutorial_link.html/about.html
@@ -6,11 +6,13 @@
         <body style="background-image: url(snoopy.jpg);">
         <h1>Selamat Datang</h1>
             <p>
-            <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
-            <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
-            <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
-            <a href="download.html" style="color:black;background-color: bisque;">Download</a>
-             <a href="form.html" style="color:black;background-color:palevioletred;">Form</a>
+           <a href="index.html" title="Go to Home" style="color:pink">Home</a> |
+          <a href="contact.html" title="Go to Contact" style="color:green">Contact</a> |
+          <a href="about.html" title="Go to About" style="color:deeppink;">About</a> |
+          <a href="download.html" style="color:black;background-color:whitesmoke;">Download</a>
+        <a href="form.html" style="color:pink;background-color:whitesmoke;">Form</a>
+        <a href="elemen.html" style="color:powderblue;background-color:whitesmoke;">Elemen</a>
+        <a href="video.html" style="color: palevioletred;background-color: whitesmoke;">Video</a>
             </p>
             <hr>
             <h1>Contoh Link Buntu</h1>
