update_form.html

--- a/tutorial_link.html/form.html
+++ b/tutorial_link.html/form.html
@@ -3,6 +3,7 @@
 <head>
     <title>Form Login</title>
 </head>
+ <body style="background-image:url(snoopy.jpg)"></body>
 <body>
     <form action="login.php" method="POST">
         <fieldset>
